--- a/emplayer/pubspec.yaml
+++ b/emplayer/pubspec.yaml
@@ -28,9 +28,14 @@ environment:
 # dependencies can be manually updated by changing the version numbers below to
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
-dependencies:
+dependencies: 
   flutter:
     sdk: flutter
+  curved_navigation_bar: ^1.0.3
+  font_awesome_flutter: ^10.2.1
+  community_material_icon: ^5.9.55
+  # //cupertino_icons: ^1.0.2
+  
 
 
   # The following adds the Cupertino Icons font to your application.
