--- a/emplayer/.gitignore
+++ b/emplayer/.gitignore
@@ -42,3 +42,6 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+.dart_tool/package_config.json
+.dart_tool/package_config_subset
