--- a/emplayer/ios/Flutter/Generated.xcconfig
+++ b/emplayer/ios/Flutter/Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
 FLUTTER_ROOT=C:\src\flutter
-FLUTTER_APPLICATION_PATH=C:\Users\Yusuf Fasahte\Documents\GitHub\EmotionBasedMusicPlayer\emplayer
+FLUTTER_APPLICATION_PATH=C:\Users\niran\OneDrive\Desktop\flutter\mini_project\EmotionBasedMusicPlayer\emplayer
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
