--- a/emplayer/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/emplayer/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
 FLUTTER_ROOT=C:\src\flutter
-FLUTTER_APPLICATION_PATH=C:\Users\niran\OneDrive\Desktop\flutter\mini_project\EmotionBasedMusicPlayer\emplayer
+FLUTTER_APPLICATION_PATH=C:\Users\Yusuf Fasahte\Documents\GitHub\EmotionBasedMusicPlayer\emplayer
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
